AprofundamentomCloud/case6/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful-app
spec:
  selector:
    matchLabels:
      app: stateful-app
  serviceName: "stateful-service"
  replicas: 3
  template:
    metadata:
      labels:
        app: stateful-app
    spec:
      containers:
      - name: stateful-container
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
